Fix ChromeBrowserProvider bookmark observer thread issue.

The BookmarkModelObserverTask added a bookmark model observer
on a background thread, which is not allowed.

In both cases of Remove and Update, there is no need for listening
to the observer as we can just track whether we are updating the
bookmark node internally.  This is consistent with how
AddBookmarkTask already worked.

BUG=838988

Change-Id: I43bf054b70e78907a99ba2a11fac62df0af6bc67
Reviewed-on: https://chromium-review.googlesource.com/1089497
Reviewed-by: Yaron Friedman <yfriedman@chromium.org>
Commit-Queue: Ted Choc <tedchoc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565667}